@@ -141,6 +141,10 @@ module StateMachine
           :save
         end
         
+        # Skips defining reader/writer methods since this is done automatically
+        def define_attribute_accessor
+        end
+        
         # Creates a scope for finding records *with* a particular state or
         # states for the attribute
         def create_with_scope(name)
