@@ -176,19 +176,39 @@ begin
       end
     end
     
-    class MachineWithNonColumnStateAttributeTest < BaseTestCase
+    class MachineWithNonColumnStateAttributeUndefinedTest < BaseTestCase
       def setup
-        @resource = new_resource
+        @resource = new_resource do
+          def initialize
+            # Skip attribute initialization
+          end
+        end
+        
         @machine = StateMachine::Machine.new(@resource, :status, :initial => 'parked')
         @record = @resource.new
       end
       
-      def test_should_define_a_reader_attribute_for_the_attribute
-        assert @record.respond_to?(:status)
+      def test_should_not_define_a_reader_attribute_for_the_attribute
+        assert !@record.respond_to?(:status)
       end
       
-      def test_should_define_a_writer_attribute_for_the_attribute
-        assert @record.respond_to?(:status=)
+      def test_should_not_define_a_writer_attribute_for_the_attribute
+        assert !@record.respond_to?(:status=)
+      end
+      
+      def test_should_define_an_attribute_predicate
+        assert @record.respond_to?(:status?)
+      end
+    end
+    
+    class MachineWithNonColumnStateAttributeDefinedTest < BaseTestCase
+      def setup
+        @resource = new_resource do
+          attr_accessor :status
+        end
+        
+        @machine = StateMachine::Machine.new(@resource, :status, :initial => 'parked')
+        @record = @resource.new
       end
       
       def test_should_set_initial_state_on_created_object
@@ -443,5 +463,5 @@ begin
     end
   end
 rescue LoadError
-  $stderr.puts 'Skipping DataMapper tests. `gem install dm-core rspec hoe launchy do_sqlite3` and try again.'
+  $stderr.puts 'Skipping DataMapper tests. `gem install dm-core cucumber rspec hoe launchy do_sqlite3` and try again.'
 end
